// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody should create TableBody with empty users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tbody />
    </div>
  </body>,
  "container": <div>
    <tbody />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TableBody should create TableBody with users 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tbody>
        <tr
          class="tbody_tr"
        >
          <td
            class="tbody_td"
          >
            1
          </td>
          <td
            class="tbody_td"
          >
            Сергей
          </td>
          <td
            class="tbody_td"
          >
            Валов
          </td>
          <td
            class="tbody_td"
          >
            +79524216936
          </td>
          <td
            class="tbody_td"
          >
            val321@mail.ru
          </td>
          <td
            class="tbody_td"
          >
            147852963.Qwe
          </td>
        </tr>
        <tr
          class="tbody_tr"
        >
          <td
            class="tbody_td"
          >
            2
          </td>
          <td
            class="tbody_td"
          >
            Иван
          </td>
          <td
            class="tbody_td"
          >
            Архипов
          </td>
          <td
            class="tbody_td"
          >
            +79528529647
          </td>
          <td
            class="tbody_td"
          >
            ivan321q@mail.ru
          </td>
          <td
            class="tbody_td"
          >
            147852963.Qwe
          </td>
        </tr>
      </tbody>
    </div>
  </body>,
  "container": <div>
    <tbody>
      <tr
        class="tbody_tr"
      >
        <td
          class="tbody_td"
        >
          1
        </td>
        <td
          class="tbody_td"
        >
          Сергей
        </td>
        <td
          class="tbody_td"
        >
          Валов
        </td>
        <td
          class="tbody_td"
        >
          +79524216936
        </td>
        <td
          class="tbody_td"
        >
          val321@mail.ru
        </td>
        <td
          class="tbody_td"
        >
          147852963.Qwe
        </td>
      </tr>
      <tr
        class="tbody_tr"
      >
        <td
          class="tbody_td"
        >
          2
        </td>
        <td
          class="tbody_td"
        >
          Иван
        </td>
        <td
          class="tbody_td"
        >
          Архипов
        </td>
        <td
          class="tbody_td"
        >
          +79528529647
        </td>
        <td
          class="tbody_td"
        >
          ivan321q@mail.ru
        </td>
        <td
          class="tbody_td"
        >
          147852963.Qwe
        </td>
      </tr>
    </tbody>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
